# Gupt

./: .env.example  .gitignore  Cargo.toml  README.md  logcat_dump.txt
.github/workflows/: rust.yml
apps/android/: build.gradle.kts  settings.gradle.kts
apps/android/app/: build.gradle.kts  local.properties
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/com/gupt/: GuptApplication.kt  MainActivity.kt  SupabaseConfig.kt
apps/android/app/src/main/java/com/gupt/di/: AppModule.kt
apps/android/app/src/main/java/com/gupt/domain/: SessionManager.kt
apps/android/app/src/main/java/com/gupt/domain/model/: AppUser.kt  BlockedUser.kt  ChatBackup.kt  Conversation.kt  EncryptedMessage.kt  UserProfile.kt
apps/android/app/src/main/java/com/gupt/ffi/: GuptEngine.kt
apps/android/app/src/main/java/com/gupt/presentation/navigation/: NavGraph.kt
apps/android/app/src/main/java/com/gupt/presentation/screens/auth/: LoginScreen.kt  RegisterScreen.kt
apps/android/app/src/main/java/com/gupt/presentation/screens/chat/: ChatScreen.kt
apps/android/app/src/main/java/com/gupt/presentation/screens/home/: ConversationsScreen.kt
apps/android/app/src/main/java/com/gupt/presentation/screens/mesh/: MeshDiscoveryScreen.kt
apps/android/app/src/main/java/com/gupt/presentation/screens/onboarding/: OnboardingScreen.kt
apps/android/app/src/main/java/com/gupt/presentation/screens/profile/: ProfileScreen.kt
apps/android/app/src/main/java/com/gupt/presentation/screens/splash/: SplashScreen.kt
apps/android/app/src/main/java/com/gupt/presentation/theme/: Color.kt  Theme.kt  Type.kt
apps/android/app/src/main/java/com/gupt/presentation/viewmodels/: ChatViewModel.kt
apps/android/app/src/main/java/com/gupt/services/: BleService.kt
apps/android/app/src/main/res/values/: strings.xml
apps/android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
apps/ios/: project.yml
apps/ios/GuPT/: ContentView.swift  EngineProvider.swift  GuPTApp.swift  Info.plist  MainTabView.swift
apps/ios/GuPT/Screens/Chat/: ChatView.swift
apps/ios/GuPT/Screens/Home/: ConversationsView.swift
apps/ios/GuPT/Screens/Mesh/: MeshDiscoveryView.swift
apps/ios/GuPT/Screens/Onboarding/: OnboardingView.swift
apps/ios/GuPT/Theme/: Color+Gupt.swift
apps/ios/GuPT/ViewModels/: ChatViewModel.swift
backend/api/: Cargo.toml
backend/api/src/: main.rs
backend/auth/: Cargo.toml
backend/auth/src/: lib.rs
backend/database/: Cargo.toml
backend/database/migrations/: 001_initial_schema.sql  002_add_password.sql  003_create_chat_backups.sql  004_user_profiles_and_blocking.sql  005_encrypted_messages.sql  006_realtime_encrypted_messages.sql  007_create_avatars_bucket.sql
backend/database/src/: lib.rs
backend/middleware/: Cargo.toml
backend/middleware/src/: lib.rs
backend/models/: Cargo.toml
backend/models/src/: lib.rs
backend/relay/: Cargo.toml
backend/relay/src/: lib.rs
backend/repositories/: Cargo.toml
backend/repositories/src/: lib.rs
core/battery/: Cargo.toml
core/battery/src/: lib.rs
core/common/: Cargo.toml
core/common/src/: config.rs  error.rs  lib.rs  types.rs
core/crypto/: Cargo.toml
core/crypto/src/: encryption.rs  error.rs  kdf.rs  keys.rs  lib.rs  signing.rs
core/device_discovery/: Cargo.toml
core/device_discovery/src/: lib.rs
core/ffi/: Cargo.toml  build.rs
core/ffi/src/: gupt.udl  lib.rs  mapper.rs
core/file_transfer/: Cargo.toml
core/file_transfer/src/: lib.rs
core/identity/: Cargo.toml
core/identity/src/: error.rs  lib.rs  manager.rs  session.rs
core/mesh/: Cargo.toml
core/mesh/src/: lib.rs
core/network_monitor/: Cargo.toml
core/network_monitor/src/: lib.rs
core/notification/: Cargo.toml
core/notification/src/: lib.rs
core/queue/: Cargo.toml
core/queue/src/: lib.rs
core/routing/: Cargo.toml
core/routing/src/: lib.rs
core/storage/: Cargo.toml
core/storage/src/: database.rs  error.rs  lib.rs  repositories.rs  schema.rs
core/sync/: Cargo.toml
core/sync/src/: lib.rs
core/transport/: Cargo.toml
core/transport/src/: lib.rs
core/trust/: Cargo.toml
core/trust/src/: lib.rs
docs/: architecture.md  security.md
scripts/: build_android.sh  build_ios.sh  generate_bindings.ps1
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
