[workspace]
members = [
    # ─── Core Engine Crates ───
    "core/common",
    "core/crypto",
    "core/identity",
    "core/storage",
    "core/routing",
    "core/transport",
    "core/mesh",
    "core/sync",
    "core/trust",
    "core/battery",
    "core/queue",
    "core/file_transfer",
    "core/network_monitor",
    "core/device_discovery",
    "core/notification",
    "core/ffi",

    # ─── Backend Crates ───
    "backend/api",
    "backend/auth",
    "backend/database",
    "backend/models",
    "backend/repositories",
    "backend/relay",
    "backend/middleware",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Gupt Contributors"]
license = "MIT"
repository = "https://github.com/gupt/gupt"
description = "Hybrid Adaptive Communication Platform"

[workspace.dependencies]
# ─── Async Runtime ───
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# ─── Serialization ───
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ─── Error Handling ───
thiserror = "2"
anyhow = "1.0"

# ─── Logging / Tracing ───
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ─── Cryptography ───
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2", features = ["static_secrets", "serde"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# ─── Database (Local — SQLCipher) ───
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }

# ─── Database (Cloud — Supabase PostgreSQL) ───
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "chrono",
    "json",
] }

# ─── Web Framework ───
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# ─── UniFFI ───
uniffi = "0.28"

# ─── UUID ───
uuid = { version = "1", features = ["v4", "serde"] }

# ─── Time ───
chrono = { version = "0.4", features = ["serde"] }

# ─── Bytes / Encoding ───
bytes = "1"
base64 = "0.22"
hex = "0.4"

# ─── Configuration ───
dotenvy = "0.15"

# ─── HTTP Client (for backend relay) ───
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# ─── JWT ───
jsonwebtoken = "9"

# ─── Password Hashing (backend) ───
bcrypt = "0.16"

# ─── Internal Crates ───
gupt-common = { path = "core/common" }
gupt-crypto = { path = "core/crypto" }
gupt-identity = { path = "core/identity" }
gupt-storage = { path = "core/storage" }
gupt-routing = { path = "core/routing" }
gupt-transport = { path = "core/transport" }
gupt-mesh = { path = "core/mesh" }
gupt-sync = { path = "core/sync" }
gupt-trust = { path = "core/trust" }
gupt-battery = { path = "core/battery" }
gupt-queue = { path = "core/queue" }
gupt-file-transfer = { path = "core/file_transfer" }
gupt-network-monitor = { path = "core/network_monitor" }
gupt-device-discovery = { path = "core/device_discovery" }
gupt-notification = { path = "core/notification" }
gupt-ffi = { path = "core/ffi" }
gupt-api = { path = "backend/api" }
gupt-auth = { path = "backend/auth" }
gupt-database = { path = "backend/database" }
gupt-models = { path = "backend/models" }
gupt-repositories = { path = "backend/repositories" }
gupt-relay = { path = "backend/relay" }
gupt-middleware = { path = "backend/middleware" }
