[package]
name = "gupt-repositories"
version.workspace = true
edition.workspace = true
description = "Repository layer providing database access for the Gupt backend"

[dependencies]
gupt-models = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
