[package]
name = "gupt-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared types and error definitions for the Gupt platform"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
