[package]
name = "gupt-notification"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Notification engine for the Gupt platform"

[dependencies]
gupt-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
