[package]
name = "gupt-routing"
version.workspace = true
edition.workspace = true

[dependencies]
gupt-common = { workspace = true }
gupt-transport = { workspace = true }
gupt-battery = { workspace = true }
gupt-trust = { workspace = true }
gupt-network-monitor = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
