[package]
name = "gupt-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SQLCipher local database for the Gupt platform"

[dependencies]
gupt-common = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
