[package]
name = "gupt-sync"
version.workspace = true
edition.workspace = true

[dependencies]
gupt-common = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
