[package]
name = "gupt-transport"
version.workspace = true
edition.workspace = true

[dependencies]
gupt-common = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
